@startuml
title Class Diagram : Payment (UC12)

' Controller
class PaymentController {
    - paymentService : PaymentService
    + momoIPN(payload: Map<String, Object>) : ResponseEntity<?>
    + momoReturn(allParams: Map<String, String>) : ResponseEntity<?>
}

' Service
interface PaymentService <<interface>> {
    + getOrderDetails(orderId: Long) : Order
    + processPayment(dto: ProcessPaymentRequestDTO) : PaymentResponseDTO
    + processMomoIPN(payload: Map<String, Object>) : void
    + processMomoReturn(allParams: Map<String, String>) : String
}

class PaymentServiceImpl {
    - orderRepository : OrderRepository
    - orderItemRepository : OrderItemRepository
    - orderHistoryRepository : OrderHistoryRepository
    - momoService : MomoService
    + getOrderDetails(orderId: Long) : Order
    + processPayment(dto: ProcessPaymentRequestDTO) : PaymentResponseDTO
    + processMomoIPN(payload: Map<String, Object>) : void
    + processMomoReturn(allParams: Map<String, String>) : String
    - updateOrderPayStatus(orderId: Long, success: boolean) : void
}

' Momo Integration
interface MomoService <<interface>> {
    + verifySignature(params: Map<String, String>) : boolean
}

' Repository
interface OrderRepository <<interface>> {
    + findById(orderId: Long) : Optional<Order>
}

interface OrderItemRepository <<interface>> {
    + save(entity: S) : <S extends T> S
}

interface OrderHistoryRepository <<interface>> {
    + save(entity: S) : <S extends T> S
}

' Entity

class Order {
    - id : Long
    - totalAmount : Double
    - paymentMethod : PaymentMethod
    - orderDate : Date
    - orderItems : List<OrderItem>
}

class OrderItem {
    - id : Long
    - status : OrderStatus
    - price : Double
    - quantity : Long
}

class OrderHistory {
    - id : Long
    - previousStatus : OrderStatus
    - newStatus : OrderStatus
    - changeDate : Date
}

Order "1" *-- "1..*" OrderItem : contains >
OrderItem "1" *-- "0..*" OrderHistory : tracks >

' Relationships

' Class implement Interface
PaymentServiceImpl ..|> PaymentService

' Dependency Injection
PaymentController --> PaymentService : - paymentService
PaymentServiceImpl --> OrderRepository : - orderRepository
PaymentServiceImpl --> OrderItemRepository : - orderItemRepository
PaymentServiceImpl --> OrderHistoryRepository : - orderHistoryRepository
PaymentServiceImpl --> MomoService : - momoService

' Object Usage
PaymentServiceImpl ..> Order : <<uses>>
PaymentServiceImpl ..> OrderItem : <<uses>>
PaymentServiceImpl ..> OrderHistory : <<uses>>

@enduml